# ML-projects

./: README.md
Ice Cream Dataset Exploration/: .gitignore  ice_cream_dataset_exploration.html  ice_cream_dataset_exploration.ipynb  readme.md  requirements.txt
MRV Emissions Exploration/: mrv_emissions_exploration.ipynb  readme.md  requirements.txt  utils.py
Marketing optimisation/: estimator.h5  optimisation.ipynb  prediction.ipynb  pyproject.toml  readme.md  transformer.pkl  utils.py
NEAT examples/xor/: Digraph.gv  neat-checkpoint-114  neat-checkpoint-119  neat-checkpoint-129  neat-checkpoint-134  neat-checkpoint-139  neat-checkpoint-19  neat-checkpoint-24  neat-checkpoint-34  neat-checkpoint-39  neat-checkpoint-4  neat-checkpoint-44  (+7 more)
NEAT-Flappy-Bird-master/: config-feedforward.txt
Neural network - car game/: .gitignore  1_dqn_tutorial.ipynb  1_dqn_tutorial.py  Best_00-02-16_0.715.model  Best_07-17-40_1.956.model  Best_18-43-23_2.002_358.model  Deep_Q_learning.py  NN_weights_manipulator.py  README.md  algos.py  cargame.py  homegym.py  main.py  neat_config  neat_config broken  neat_config incomplete  neat_example.py  neat_opt.py  readme.md  run_algo.py  todo.txt  visualize.py
Neural network - connectfour/: GA_test.py  connectfour.py  geneticoptimiser.py  main.py  neat_config
Neural network - image to text numbers/: Image to text - number recognition.py  Neural network - load and predict.py  Neural network - train and save.py  arch_hist.csv  model.h5
Neural network - noughtscrosses/: main.py  neat_config  noughtscrosses.py  todo.txt  visualize.py
(+164 files in other folders)
